# django-surveys-playground

./: .gitignore  README.md  pyproject.toml
api/surveysadmin/: manage.py
api/surveysadmin/assets/db_schema/: django-surveys-playground-admin.diagram
api/surveysadmin/businessrules/: apps.py
api/surveysadmin/commons/: models.py
api/surveysadmin/form/: apps.py  models.py
api/surveysadmin/localization/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/surveysadmin/surveysadmin/: asgi.py  settings.py  urls.py  wsgi.py
