[tool.poetry]
name = "django-surveys-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
pylint = "^2.13.5"
PyYAML = "^6.0"
psycopg2-binary = "^2.9.3"
perflint = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
